--- a/package.json
+++ b/package.json
@@ -20,22 +20,28 @@
   "homepage": "https://github.com/yubingcen/koa-ts-yu#readme",
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/gm": "^1.18.6",
     "@types/koa": "^2.0.52",
     "@types/koa-cors": "^0.0.0",
     "@types/koa-helmet": "^3.1.2",
     "@types/koa-router": "^7.0.42",
+    "@types/koa-send": "^4.1.2",
     "@types/mongoose": "^5.5.32",
     "@types/node": "^12.12.9",
+    "@types/uuid": "^3.4.6",
     "bcrypt": "^3.0.7",
+    "gm": "^1.23.1",
     "koa": "^2.11.0",
     "koa-body": "^4.1.1",
     "koa-combine-routers": "^4.0.2",
     "koa-cors": "^0.0.16",
     "koa-helmet": "^5.2.0",
     "koa-router": "^7.4.0",
+    "koa-send": "^5.0.0",
     "mongoose": "^5.7.12",
     "nodemon": "^1.19.4",
     "ts-node": "^8.5.2",
-    "typescript": "^3.7.2"
+    "typescript": "^3.7.2",
+    "uuid": "^3.3.3"
   }
 }
