--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc && node index.js",
+    "start": "tsc && node ./src/index.ts",
     "server": "nodemon -e ts,tsx --exec 'ts-node' ./src/index.ts"
   },
   "repository": {
