--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/yubingcen/koa-ts-yu#readme",
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/bluebird": "^3.5.29",
     "@types/gm": "^1.18.6",
     "@types/koa": "^2.0.52",
     "@types/koa-cors": "^0.0.0",
@@ -28,8 +29,10 @@
     "@types/koa-send": "^4.1.2",
     "@types/mongoose": "^5.5.32",
     "@types/node": "^12.12.9",
+    "@types/redis": "^2.8.14",
     "@types/uuid": "^3.4.6",
     "bcrypt": "^3.0.7",
+    "bluebird": "^3.7.1",
     "gm": "^1.23.1",
     "koa": "^2.11.0",
     "koa-body": "^4.1.1",
@@ -40,6 +43,7 @@
     "koa-send": "^5.0.0",
     "mongoose": "^5.7.12",
     "nodemon": "^1.19.4",
+    "redis": "^2.8.0",
     "ts-node": "^8.5.2",
     "typescript": "^3.7.2",
     "uuid": "^3.3.3"
