--- a/package.json
+++ b/package.json
@@ -47,5 +47,8 @@
     "ts-node": "^8.5.2",
     "typescript": "^3.7.2",
     "uuid": "^3.3.3"
+  },
+  "dependencies": {
+    "koa-jwt": "^3.6.0"
   }
 }
