--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/bluebird": "^3.5.29",
     "@types/gm": "^1.18.6",
+    "@types/jsonwebtoken": "^8.3.5",
     "@types/koa": "^2.0.52",
     "@types/koa-cors": "^0.0.0",
     "@types/koa-helmet": "^3.1.2",
@@ -34,6 +35,7 @@
     "bcrypt": "^3.0.7",
     "bluebird": "^3.7.1",
     "gm": "^1.23.1",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.11.0",
     "koa-body": "^4.1.1",
     "koa-combine-routers": "^4.0.2",
