--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/uuid": "^3.4.6",
     "bcrypt": "^3.0.7",
     "bluebird": "^3.7.1",
+    "dayjs": "^1.8.17",
     "gm": "^1.23.1",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.11.0",
