--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "koa": "^2.11.0",
     "koa-body": "^4.1.1",
     "koa-combine-routers": "^4.0.2",
+    "koa-compose": "^4.1.0",
     "koa-cors": "^0.0.16",
     "koa-helmet": "^5.2.0",
     "koa-router": "^7.4.0",
