--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/koa-send": "^4.1.2",
     "@types/mongoose": "^5.5.32",
     "@types/node": "^12.12.9",
+    "@types/nodemailer": "^6.2.2",
     "@types/redis": "^2.8.14",
     "@types/uuid": "^3.4.6",
     "bcrypt": "^3.0.7",
@@ -46,6 +47,7 @@
     "koa-router": "^7.4.0",
     "koa-send": "^5.0.0",
     "mongoose": "^5.7.12",
+    "nodemailer": "^6.4.1",
     "nodemon": "^1.19.4",
     "redis": "^2.8.0",
     "svg-captcha": "^1.4.0",
